--- a/META.yml
+++ b/META.yml
@@ -6,13 +6,12 @@ build_requires:
   File::Find: 0
   File::Temp: 0
   Module::Build: 0.3601
-  Plack::Loader: 0
   Test::More: 0.96
 configure_requires:
   ExtUtils::MakeMaker: 6.30
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300012, CPAN::Meta::Converter version 2.120900'
+generated_by: 'Dist::Zilla version 4.300016, CPAN::Meta::Converter version 2.120630'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -24,9 +23,8 @@ no_index:
 requires:
   Carp: 0
   Getopt::Long: 0
-  LWP::UserAgent: 0
+  HTTP::Tiny: 0
   Pod::Usage: 0
-  URI: 0
   perl: v5.10.1
   strict: 0
   warnings: 0
@@ -34,4 +32,4 @@ resources:
   bugtracker: https://github.com/doherty/WWW-Hashbang-Pastebin-Client/issues
   homepage: http://metacpan.org/release/WWW-Hashbang-Pastebin-Client/
   repository: git://github.com/doherty/WWW-Hashbang-Pastebin-Client.git
-version: 0.002
+version: 0.003
